<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_add_bottom_sheet_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:gravity="center"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="25dp"
        android:padding="16dp"
        android:text="@string/add_details" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="foodInsert"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/food" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_food"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onReminderClicked"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/alarm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_remainders"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="regimenInsert"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/regimenpic" />


            <!--fontPath="fonts/lato-bold.ttf"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_regimen"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="glucoseInsert"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/blood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_glucose"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="exerciseInsert"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/exercise" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_exercise"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="prescriptionInsert"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:src="@drawable/medicine" />
            <TextView
                android:id="@+id/textViewmed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/maroon"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/add_medicine"
                android:textSize="12sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/maroon"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="25dp"
                android:padding="10dp"
                android:text="@string/regimen_title"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.56"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/tested_bgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/leftMargin"
                android:text="@string/tested_bgl"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tested_bgl_value"
                android:layout_marginRight="@dimen/leftMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:layout_weight="0.91" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp">
            <TextView
                android:id="@+id/exercise_regimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/leftMargin"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:text="@string/exercise_regimen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/exercise_regimen_value"
                android:layout_marginRight="@dimen/leftMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:layout_weight="0.90" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp">
            <TextView
                android:id="@+id/prescription_regimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/leftMargin"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:text="@string/prescription_regimen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/prescription_regimen_value"
                android:layout_marginRight="@dimen/leftMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:layout_weight="0.90" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.77"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp">
            <TextView
                android:id="@+id/diet_regimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/leftMargin"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:text="@string/diet_regimen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.46"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/diet_regimen_value"
                android:layout_marginRight="@dimen/leftMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/maroon"
                android:textSize="@dimen/hidestringsize"
                android:layout_weight="0.93" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>